# budget-facile

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  taskfile.yaml  token.json
api/: main.py  requirements.txt
tasks/: taskfile.hooks.yaml  taskfile.lock.yaml
ui/: app.py
