[tool.poetry]
name = "budget-facile"
version = "0.0.1"
description = ""
authors = ["Cyriac Azefack <cyriac.azefack@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
svix = "^1.32.0"
uvicorn = "^0.30.6"
interrogate = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
